@@ -199,8 +199,8 @@ Starts with first value.
    <h2> Generated Test Class</h2></a>
   <pre>
 # Tests generated by: guppy.gsl.Tester
-# Main source file: /home/sverker/guppy-pe/trunk/guppy/specs/docexample.gsl
-# Date: Wed Apr  9 00:20:49 2008
+# Main source file: /home/sverker/guppy/specs/docexample.gsl
+# Date: Wed May 14 11:19:24 2008
 class Tester:
     tests = {}
     def test_example_kind(self, arg):
@@ -266,4 +266,4 @@ class Tester:
     tests['.tgt.docexample.example_kind'] = test_example_kind
 </pre><! --  end pre
      -->
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:19:24 2008</div></body></html>
