@@ -500,4 +500,4 @@ unspecified whether this returned copy is mutable or immutable.
  a hash value based on the addresses of the elements.
 
 </dt></dl></dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:48 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:19:23 2008</div></body></html>
